<resources>
    <string name="app_name">Học toán cùng bé</string>
    <string name="addition">Phép cộng</string>
    <string name="subtraction">Phép trừ</string>
    <string name="multiplication">Phép nhân</string>
    <string name="division">Phép chia</string>
    <string name="compare">Phép so sánh</string>
    <string name="random">Ngẫu nhiên</string>
    <string name="question">Câu hỏi</string>
    <string name="submit">Gửi câu trả lời</string>
    <string name="view_score">Xem điểm</string>
    <string name="reset">Bắt đầu lại</string>
    <string name="retry">Thử lại</string>
    <string name="test"> Kiểm tra</string>

    <string name="menu_add">Danh sách phép cộng</string>
    <string name="cong_lien_tiep">Cộng liên tiếp</string>
    <string name="cong_mot_chu_so">Cộng 1 chữ số</string>
    <string name="cong_ba_chu_so">Cộng 3 chữ số</string>
    <string name="cong_hai_chu_so">Cộng 2 chữ số</string>
    <string name="cong_ba_so">Cộng 3 số</string>
    <string name="phep_cong_don_gian">Cộng đơn giản</string>

    <string name="caiDatTable">Cài đặt</string>
    <string name="rank">Xếp hạng</string>
    <string name="answer">Câu trả lời</string>

    <string name="bang_nhan">Nhân liên tiếp</string>
    <string name="nhan_mot_chu_so">Nhân 1 x 1 chữ số </string>
    <string name="nhan_hai_chu_so">Nhân 2 x 1 chữ số</string>
    <string name="nhan_so_hai_don_vi">Nhân 2 x 2 chữ số</string>
    <string name="nhan_ba_so">Nhân 3 x 1 chữ số</string>
    <string name="phep_nhan_don_gian">Nhân đơn giản</string>

    <string name="bang_chia">Chia liên tiếp</string>
    <string name="chia_mot_chu_so">Chia 1 / 1 chữ số</string>
    <string name="chia_hai_chu_so">Chia 2 / 1 chữ số</string>
    <string name="chia_so_hai_don_vi">Chia 2 / 2 chữ số</string>
    <string name="chia_ba_chu_so">Chia 3 / 1 số</string>
    <string name="phep_chia_don_gian">Chia đơn giản</string>

    <string name="bang_tru">Trừ liên tiếp</string>
    <string name="tru_mot_chu_so">Trừ 1 - 1  chữ số</string>
    <string name="tru_ba_chu_so">Trừ 3 - 1 chữ số</string>
    <string name="tru_hai_chu_so">Trừ 2- 2 chữ số</string>
    <string name="tru_ba_so">Trừ 3 số</string>
    <string name="Phep_tru_don_gian">Trừ đơn giản</string>


    <string name="app">Bang Nhan</string>
    <string-array name="times_table_options">
        <item>Bang Nhan 1</item>
        <item>Bang Nhan 2</item>
        <item>Bang Nhan 3</item>
        <item>Bang Nhan 4</item>
        <item>Bang Nhan 5</item>
        <item>Bang Nhan 6</item>
        <item>Bang Nhan 7</item>
        <item>Bang Nhan 8</item>
        <item>Bang Nhan 9</item>
        <item>Bang Nhan 10</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">Trang chủ</string>
    <string name="tab_2">Lịch sử làm bài</string>
    <string name="tab_3">Cài đặt</string>
    <string name="tab_4">Tab 4</string>
    <string name="tab_5">Xem hồ sơ cá nhân</string>
    <string name="tab_6">Báo cáo kết quả</string>
    <string name="tab_7">Ngôn ngữ</string>
    <string name="tab_8">Âm thanh</string>
    <string name="tab_9">Tab 9</string>
    <string name="tab_10">Tab 10</string>
    <string name="tab_11">Tab 11</string>
    <string name="tab_12">Tab 12</string>
    <string name="tab_13">Tab 13</string>
    <string name="tab_14">Tab 14</string>
    <string name="luyentap">Luyện tập</string>
    <string name="xephang">Xếp hạng</string>
    <string name="diem">Điểm</string>
    <string name="ten">Tên</string>
    <string name="nhac_nen">Nhạc nền</string>
    <string name="thoi_gian">Thời gian</string>


    <string-array name="comparison_operators">
        <item>&lt;</item>
        <item>&gt;</item>
        <item>=</item>
    </string-array>


</resources>