<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_color"
    android:gravity="center"
    android:layout_marginTop="60sp"
    >

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="32sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:textColor="@color/text_primary"
        android:gravity="center" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center">

        <Button
            android:id="@+id/answer1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/answer"
            android:backgroundTint="@color/answer_button"
            android:textColor="@color/text_secondary"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/answer2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/answer"
            android:textColor="@color/text_secondary"
            android:backgroundTint="@color/answer_button"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/answer3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/answer"
            android:textColor="@color/text_secondary"
            android:backgroundTint="@color/answer_button"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/answer4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/answer"
            android:textColor="@color/text_secondary"
            android:backgroundTint="@color/answer_button"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"
            />
    </GridLayout>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_200"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/rounded_button"
        android:visibility="gone" />

    <Button
        android:id="@+id/view_score_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_score"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_200"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/rounded_button"
        android:visibility="gone" />

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/text_secondary"
        android:padding="16dp"
        android:gravity="center" />

</LinearLayout>